fix: change tap screen z-index

--- a/src/Camera.scss
+++ b/src/Camera.scss
@@ -251,7 +251,7 @@ $color-2: rgba(255,255,255,0.6);
 
   &__tap-screen {
     position: absolute;
-    z-index: 5;
+    z-index: 8;
     top: 0;
     left: 0;
     width: 100%;
